kubernetes/apps/openebs-system/openebs/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: openebs
  namespace: openebs-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: openebs
  policyTypes:
    - Ingress
    - Egress
  egress:
    # Allow access to all namespaces for storage operations
    - to:
        - namespaceSelector: {}
